--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ p.double {border-style: double;}
 <p class="double">Atenção cada novel é de minha autoria então não posso garantir que vá possuir uma data exata para o lançamento de novos capítulos, más sempre estarei de protidão para lançar o mais breve possivel</p><br>
 <p class="double">"Escola De Prodigios" é uma história na qual se passa no Japão onde a "Centro de Hanagakuri para jovens super dotados"(花栗過発達青少年センター) recebe a noticia que devido as otimas qualidade academicas do país especialmente da cidade muitas escolas e paises  desejam fazer intercambio para lá, com isso a escola ficou responsavel por receber alunos da escola brasileira E.E.E.P.P. (Escola de Ensino Especial Para Prodigios) e agora eles vão mostrar como é a incrivel vida academica de um estudante japonês e tambem fora da escola.</p>
 
-<a href="Meu E-Book.html"Capituo>Voltar Para o Menu inícial</a><br><br>
+<a href="https://maestr7.github.io/Home/">Voltar Para o Menu inícial</a><br><br>
 
 <p class="double">Escola De Prodigios<br>
 <a href="EscolaDeProdigios.html">Capitúlo 1.0 (Os Novos Alunos)</a>
