--- a/EscolaDeProdigios.html
+++ b/EscolaDeProdigios.html
@@ -19,7 +19,7 @@ p.dotted {border-style: dotted;}
 </style>
 </head>
 <body>
-<h1><i>Entre Dois Mundos</i></h1>
+<h1><i>Visita a "Hanagakuri"</i></h1>
 <h5>Essa hitória é inspirada em diversos animes mangás e outras Novels que será meljor explicado nas últimaslinhas da página! então muito obrigado pela atenção e vamos logo para oq interessa. </h5>
 <h2><i>Prólogo do medo</i></h2>
 <p class="dotted">Em uma escola no Japão alguns alunos em sala estão estudando até que a diretora entra:<br><br>
@@ -62,3 +62,4 @@ Yumi chega bem a tempo enquanto seu pai um homem alto com uma roupa casual e uma
 </body>
 <a href="index.html">|Voltar|</a><br> <a href="1.1.html">|Proximo Capítulo|</a>
 </htm>
+
