--- a/EscolaDeProdigios.html
+++ b/EscolaDeProdigios.html
@@ -21,7 +21,7 @@ p.dotted {border-style: dotted;}
 <body>
 <h1><i>Visita a "Hanagakuri"</i></h1>
 <h5>Essa hitória é inspirada em diversos animes mangás e outras Novels que será meljor explicado nas últimaslinhas da página! então muito obrigado pela atenção e vamos logo para oq interessa. </h5>
-<h2><i>Prólogo do medo</i></h2>
+<h2><i>Visita a "Hanagakuri</i></h2>
 <p class="dotted">Em uma escola no Japão alguns alunos em sala estão estudando até que a diretora entra:<br><br>
 -Com licença professora Hyu, posso dar uma informação aos alunos?<br><br>
 -Claro diretora! *a diretora fica ao lado da professora para dar o recado*<br><br>
@@ -62,4 +62,5 @@ Yumi chega bem a tempo enquanto seu pai um homem alto com uma roupa casual e uma
 </body>
 <a href="index.html">|Voltar|</a><br> <a href="1.1.html">|Proximo Capítulo|</a>
 </htm>
+
 
