Revise and expand EscolaDeProdigios.html content
The HTML content has been significantly expanded and improved, including the addition of dialogue and narrative elements to enhance the storytelling.

--- a/EscolaDeProdigios.html
+++ b/EscolaDeProdigios.html
@@ -22,45 +22,170 @@ p.dotted {border-style: dotted;}
 <h1><i>Visita a "Hanagakuri"</i></h1>
 <h5>Essa hitória é inspirada em diversos animes mangás e outras Novels que será meljor explicado nas últimaslinhas da página! então muito obrigado pela atenção e vamos logo para oq interessa. </h5>
 <h2><i>Visita a "Hanagakuri</i></h2>
-<p class="dotted">Em uma escola no Japão alguns alunos em sala estão estudando até que a diretora entra:<br><br>
--Com licença professora Hyu, posso dar uma informação aos alunos?<br><br>
--Claro diretora! *a diretora fica ao lado da professora para dar o recado*<br><br>
--Bom dia turma!*Os alunos respondem em som único*<br><br>
--Estou aqui para informar que nossa escola "Centro de Hanagakuri para jovens super dotados"(花栗過発達青少年センター) foi escolhida receber alunos de intercâmbio na proxima semana mais exatamente segunda!*Os alunos começam a prestar mais atenção na fala da diretora, eles também questionam entre se de onde seriam os alunos, de um escola longe da cidade, de outro estado então até outro país?*<br><br>
--Pôr favor vou pedir que todos se acalmem!*toda a sala fica em silêncio* Antes que que perguntem nossa escola irá receber alunos de outro país! Alunos brasileiros!*Muitos ficam animados com isso afinal o Brasil tem conseguido diversos alunos destaques em diversas áreas além de só matérias de ensino*<br><br>
-A professora que é tímida vendo o alvoroço tenta acalmar os alunos para a diretora explicar melhor a situação, a diretora faz um leve sinal com a mão simbolizando que a senhorita Hyu não precisa se incomodar *Depois de deixar os alunos se acalmar ela termina de dar o recado só pedindo para os alunos não incomodarem ou pressionasse os intercambista*, a diretora se despede dos alunos e sai de sala. A professora retorna a explicação da matéria de línguas estrangeiras e vê uma chance de fazer os alunos focarem na aula.<br><br>
-- Então pessoal acham que devemos voltar a aula de inglês?*Um aluno que senta na fileira auto de cabelos ruivos e aparentemente esportista questiona a professora*<br><br>
-- Que isso professora? Você bem que poderia dar a aula sobre a língua do alunos do Brasil né?*outra aluna com cabelos ruiva que estava lendo um livro, ajeita seu óculos e responde com uma voz serena e repreensiva*<br><br>
-- Idiota, ela estava falando ironicamente claro que ela queria dar uma aula sobre exatamente isso!*Ela mostra que mesmo lendo ela estava prestando atenção na conversa*<br><br>
-- Não precisa ser tão arrogante representante!*Ele confronta ela diretamente* Mas isso é verdade senhorita Hyu?<br><br>
-- Sim sim Goenji! Então não precisa se preocupar! E vc Mira pôr favor mesmo sendo representante de sala deve se dirigir aos outros colegas com o devido respeito! Entendido?*Ela espera uma resposta da representante*<br><br>
-- Compreendo professora tentarei ser menos autoritária da próxima vez!<br><br> 
-- Aee finalmente! estou pronto para para aprender a lingua deles como é mesmo? Espanhol? *Diz Goenji,até que a toda sala (menos Mira) ri dele* Ué?<br><br>
+<p class="dotted">Em uma escola no Japão, os alunos estavam concentrados em seus estudos quando, de repente, a porta da sala se abriu.<br><br>
 
-Com isso a senhorit Hyu inicia com o basico sobre a lingua portuguêsa todos estão prestando atenção menos uma garota que está sentada na perte de trás da sala, ela meche nos fios de seu longo e sedoso cabelo preto ela tambem seu brinco em formato de coração más sua caracteris mais chamativa é sua hetero cromia de verde e castanho nos olhos esquerdo e direito respectivamente, equanto anota em seu caderno algumas sinfonias e tambem olha pela janela distraida. Final do dia todos estão guardandos suas coisas para sairem enquanto a representante pede a atenção de todos pois tem um aviso importante para dar:
-- Nossa sala tem sido a ultima nas competições entre turmas tanto em esporte quanto em notas! Vocês se acomodaram na média e não buscaram evoluções e isso não pode acontecer! <br><br>
-- A menor nota no nosso ultimo teste foi 67 em Kateika!(Conhecimentos Domésticos)*Disse a menina com uma pequena franja rosa e roxa que senta ao lado de sua carteira* você está se preocupaando muito com isso mesmo que não estejamos na primeira colocação ainda sim estamos na escola mais prestigiada não somente na cidade mais em todo estado então não acha que está cobrando muito de si e seus colegas tambem?<br><br>
-- Sayume não acredito que estou escutando isso de você achei que estaria comigo nessa, afinal você é  aluna com as melhores notas de matematica e hístoria da escola!<br><br>
-- Pôr favor né Mira, eu apenas estou sendo realista, sei que mitos aqui tem potencial de almentar o nivel da sala e irmos para a turma "1C"  , más quero que entenda que mesmo assim a maioria está se esforçando omaximmo que conseguem, só etou dizendo para não sobrecarregalos!<br><br>
-Mira fecha a cara e olha friamente para todos em geral da sala com um olhar julgador, suspira irritada pega sua bolsa e sai de sala. A menina que estava escrevendo sinfonias no caderno logo se levanta com sua bolsa. enquanto uma de suas amigas a unica que senta ao seu lado e uma gyaru pergunta o motivo da pressa:<br><br>
-- Espera pôrmim Yumi!qual motivo dessa pressa toda?<br><br>
-- Desculpa Lyla más não viu o jeito que minha irmã saiu? Se eu me demorar mais um pouco, vou perder a carona com nosso pai e vou ser obrigada a ir de metrô, não me posso a dar esse luxo qundo tenho trabalho do professor Levil a terminar então tchauzinho!*ela se afasta se despedindo dela e da sala enquantoo ajusta seu moletom na cintura*<br><br>
-- Tchau amiga não esqueça de que vamos no shoppin amanhã!*Ela acena com a mão enquanto Yumi sai de sala*<br><br>
-Yumi chega bem a tempo enquanto seu pai um homem alto com uma roupa casual e uma cara de exausto e desdem esta esperando ela.<br><br>
-- *Ela chega o abraçando*Boa tarde papi!(ela da um beijo na bochecha dele entra no carro onde mira está lendo novamente seu livro de romance)
-- Achei que não viria mais!(diz o pai com um ton sarcastico enquanto fecha a porta de traseira e entra no acarro)
-- *Ele percebe que Yumi parece muito animada para falar algo* Eae filhotas alguma novidade na escola?*A deixa para Yumi falar o qunato foidivertido hoje más sem comentar a intriga da irmã com a colega*<br><br>
-- Ahh! Lembrei papi, iremos receber alunos de intercambio proxima semana!*Agora o pai entende a razão para tanata animação da filha*<br><br>
-- Más eae esses alunos veem de onde?*Ela explica que é do Brasil e tambem fala que a diretora ir-a organizar uma reunião com os responsaveis dos alunos para explicar melhor a situação*<br><br>
-- Isso é uma grande perda de tempo nós estamos na escola para estudar não para receber visitas, principalmente de pessoas de fora do país!<br><br>
-- Calma Mira não a necessidade para estresse! E na real acho até qu pode ser bom para vocês conhecerem mais pessoas da minha terra natal!<br><br>
-- Concordo plenamente pôr isso estou tão animada papi poi vai ser muito divertido se eles forem tão legais quanto o senhor!<br><br>
-- Concordo querida!*Eles param com outos carros no semaforo* e quem sabe até mesmo certas duas garotas irmãs encontrem algem legal e finalmente namorem!<br><br>
-- *As duas gritam constrangidas*PAII...!
+— Com licença, professora Hyu. Posso dar uma informação aos alunos?<br><br>
+
+— Claro, diretora! *respondeu a professora timidamente.*<br><br>
+
+A diretora se posiciona ao lado da professora e encara a turma.<br><br>
+
+— Bom dia, turma!
+
+— BOM DIA! * responderam os alunos em uníssono.*<br><br>
+
+— Estou aqui para informar que nossa escola, o Centro de Hanagakuri para Jovens Superdotados (花栗過発達青少年センター), foi escolhida para receber alunos de intercâmbio na próxima semana. Mais especificamente… na segunda-feira!<br><br>
+
+Um burburinho toma conta da sala. Cochichos surgem de todos os lados.<br><br>
+
+— De onde eles vêm?<br><br>
+— Outra cidade? Outro estado?<br><br>
+— Outro país?!<br><br>
+
+— Por favor, acalmem-se! *pediu a diretora.*<br><br>
+
+A sala fica em silêncio quase imediato.<br><br>
+
+— Antes que perguntem, sim… nossa escola irá receber alunos de outro país.<br><br>
+— Alunos brasileiros.<br><br>
+
+O impacto foi imediato. Muitos se animaram. O Brasil vinha se destacando cada vez mais em diversas áreas acadêmicas.A professora Hyu tenta conter o alvoroço, mas a diretora faz um leve gesto com a mão, indicando que estava tudo bem.<br><br>
+
+— Apenas peço que não incomodem nem pressionem os intercambistas. Eles estão aqui para aprender tanto quanto vocês.<br><br>
+
+A diretora se despede e sai da sala.A professora Hyu pigarreia, tentando recuperar a atenção da turma.<br><br>
+
+— Então… acham que devemos voltar à aula de inglês?<br><br>
+
+— Que isso, professora! * disse um aluno de cabelos ruivos, sentado na fileira alta. *Você bem que podia ensinar a língua do Brasil!<br><br>
+
+— Idiota… * respondeu calmamente uma aluna ruiva de óculos, sem tirar os olhos do livro. * Ela estava sendo irônica. É óbvio que era isso que ela queria dizer.<br><br>
+
+— Não precisa ser tão arrogante, representante! *rebateu o garoto. *Mas é verdade, professora Hyu?<br><br>
+
+— S-sim, Goenji… — respondeu ela, sem jeito. — Então não precisa se preocupar.<br><br>
+— E você, Mira, mesmo sendo representante de sala, deve se dirigir aos colegas com respeito, certo?<br><br>
+
+— Compreendo, professora. Tentarei ser menos autoritária da próxima vez.<br><br>
+
+— Aee! Então estou pronto para aprender a língua deles… como é mesmo? Espanhol?<br><br>
+
+Toda a sala ri. Exceto Mira.<br><br>
+
+— Ué?<br><br>
+
+A professora Hyu inicia então uma introdução básica ao português. A maioria presta atenção… menos uma garota sentada no fundo da sala.Ela mexe distraidamente nos fios de seu longo e sedoso cabelo preto. Usa um brinco em formato de coração e possui heterocromia: olho esquerdo verde, direito castanho. Enquanto anota algumas sinfonias em seu caderno, observa o céu pela janela.<br><br>
+
+<h3>Fim do dia</h3>
+
+Os alunos guardam seus materiais quando Mira se levanta.<br><br>
+
+— Atenção! Tenho um aviso importante.<br><br>
+— Nossa sala tem sido a última nas competições entre turmas, tanto em esportes quanto em notas! Vocês se acomodaram na média e não estão buscando evolução!<br><br>
+
+— A menor nota no último teste foi 67 em Kateika *comentou uma garota de franja rosa e roxa sentada ao seu lado. * Você não acha que está se cobrando demais? Ainda estamos na escola mais prestigiada do estado.<br><br>
+
+— Sayume, não acredito que estou ouvindo isso de você! * retrucou Mira. *Você é uma das melhores alunas de matemática e história!<br><br>
+
+— Mira, estou sendo realista. Muitos aqui já estão dando o máximo que conseguem. Só estou dizendo para não sobrecarregá-los.<br><br>
+
+Mira cerra os olhos, observa a sala com frieza, suspira e sai.<br><br>
+
+A garota do fundo se levanta apressada.<br><br>
+
+— Espera, Yumi! *chama sua amiga gyaru. * Por que tanta pressa?<br><br>
+
+— Não viu como minha irmã saiu? Se eu perder a carona com nosso pai, vou ter que ir de metrô… e ainda tenho trabalho do professor Levil!<br><br>
+
+— Tá bom, tá bom! Não esquece que vamos ao shopping amanhã!<br><br>
+
+— Pode deixar! * responde Yumi, ajeitando o moletom.*<br><br>
+
+<h3>No carro</h3>
+
+Yumi chega a tempo e abraça o pai, um homem alto, de expressão cansada.<br><br>
+
+— Boa tarde, papi!<br><br>
+
+— Achei que não viria mais — comenta ele, em tom sarcástico.*Eles entram no carro*<br><br>
+
+— Ah! Lembrei! Vamos receber alunos de intercâmbio semana que vem! Do Brasil!<br><br>
+
+— Entendo agora essa animação… * diz ele. * Mas haverá uma reunião com os responsáveis?<br><br>
+
+— Sim! A diretora vai explicar tudo.<br><br>
+
+— Isso é perda de tempo. Estamos aqui para estudar, não para receber visitas.<br><br>
+
+— Calma, Mira — responde o pai. — Na verdade, pode ser bom conhecerem mais pessoas da minha terra natal.<br><br>
+
+— Concordo! — diz Yumi animada. — Vai ser divertido!<br><br>
+O carro para no semáforo.<br><br>
+— Quem sabe até duas certas irmãs encontrem alguém interessante…<br><br>
+
+— PAI!! — gritam as duas, constrangidas.<br><br>
+
+O semáforo muda para verde.O carro segue pelas ruas tranquilas da cidade, agora iluminadas pelas luzes do fim de tarde. Yumi observa as pessoas caminhando apressadas, lojas fechando, estudantes rindo em grupos.<br><br>
+
+— Pai… — ela diz, apoiando o queixo na mão. — Como será que são esses alunos do Brasil?<br><br>
+
+— Provavelmente tão normais quanto vocês — responde ele, sem tirar os olhos da rua.<br><br>
+
+— Normais? — Mira fecha o livro com um estalo seco. — Duvido muito. Se fossem normais, não estariam vindo para a nossa escola.<br><br>
+
+— Verdade! — Yumi sorri. — Aposto que eles são super inteligentes… e talvez até estilosos!<br><br>
+
+O pai solta uma breve risada nasal.<br><br>
+
+— Inteligência não escolhe país. Só escolhe esforço.<br><br>
+
+O carro entra na garagem do prédio. O portão se fecha atrás deles com um som metálico.<br><br>
+
+— Amanhã teremos a reunião na escola — comenta ele. — Quero que as duas se comportem.<br><br>
+
+— Eu sempre me comporto — diz Mira, séria.<br><br>
+
+— Eu também! — responde Yumi rápido demais.<br><br>
+
+Mira lança um olhar desconfiado.Naquela mesma noite<br><br>
+
+Yumi está deitada na cama, olhando o teto, o celular jogado ao seu lado. Sua mente insiste em voltar ao anúncio da diretora.<br><br>
+
+- Alunos brasileiros…*Ela se vira de lado, abraçando o travesseiro.*<br><br>
+
+— Será que vou conseguir conversar com eles?Ela lembra da aula de português, das palavras estranhas e do som diferente da língua.<br><br>
+
+— Português… *murmura, sorrindo sozinha.* Parece difícil… mas interessante.<br><br>
+
+Do outro lado do corredor, Mira está sentada à escrivaninha, cercada de livros e anotações. Ela encara uma folha em branco por alguns segundos antes de suspirar.<br><br>
+
+— Intercâmbio… *diz em voz baixa.* Isso só vai atrasar o desempenho da turma.<br><br>
+
+Mesmo assim, sua mão hesita antes de fechar o caderno.Em outro lugar, dentro de um avião, um jovem observa as luzes do Japão surgirem pela janela. Seu sorriso é genuíno, quase infantil.<br><br>
+
+— O Japão é mesmo um local interessante não é Wytallo?… — ele diz animado. — Eu tô nervoso... Será que vai ter muita estudantes gatinha? 
+
+— É normal estar nervoso. Novo país, nova escola… novas pessoas. E talvez tenha mesmo algumas alunas bonitas....<br><br>
+
+Ele olha para ela por um instante e suaviza a expressão.<br><br>
+
+— Se for você mesma… com certeza.<br><br>
+
+A voz do piloto ecoa pela cabine, anunciando a aproximação para o pouso.<br><br>
+
+Os dois garotos respiram fundo.<br><br>
+
+— Então… começa agora, né?<br><br> *Diversos alunos com fardamento branco e calça verde descem do avião em direção a um ônibus*<br><br>
+
+O sino de uma escola toca ao longe.
+Segunda-feira se aproxima.
+Alguns encontros mudam rotinas.
+Outros… mudam pessoas.
 </p>
      
 </body>
 <a href="index.html">|Voltar|</a><br> <a href="1.1.html">|Proximo Capítulo|</a>
 </htm>
+
 
 
