--- a/EscolaDeProdigios.html
+++ b/EscolaDeProdigios.html
@@ -76,7 +76,7 @@ Toda a sala ri. Exceto Mira.<br><br>
 
 A professora Hyu inicia então uma introdução básica ao português. A maioria presta atenção… menos uma garota sentada no fundo da sala.Ela mexe distraidamente nos fios de seu longo e sedoso cabelo preto. Usa um brinco em formato de coração e possui heterocromia: olho esquerdo verde, direito castanho. Enquanto anota algumas sinfonias em seu caderno, observa o céu pela janela.<br><br>
 
-<h3>Fim do dia</h3>
+<b>Fim do dia</b>
 
 Os alunos guardam seus materiais quando Mira se levanta.<br><br>
 
@@ -101,7 +101,7 @@ A garota do fundo se levanta apressada.<br><br>
 
 — Pode deixar! * responde Yumi, ajeitando o moletom.*<br><br>
 
-<h3>No carro</h3>
+<b>No carro</b>
 
 Yumi chega a tempo e abraça o pai, um homem alto, de expressão cansada.<br><br>
 
@@ -186,6 +186,7 @@ Outros… mudam pessoas.
 </body>
 <a href="index.html">|Voltar|</a><br> <a href="1.1.html">|Proximo Capítulo|</a>
 </htm>
+
 
 
 
