Update title and content in EscolaDeProdigios.html

--- a/EscolaDeProdigios.html
+++ b/EscolaDeProdigios.html
@@ -1,6 +1,6 @@
 <html>
 <head>
- <title>Entre dois mundos cap 1.0</title>
+ <title>Escola de Proficionais cap 1.0</title>
 <style>
 body {
   background-color: rgb(13, 104, 104);
@@ -22,7 +22,7 @@ p.dotted {border-style: dotted;}
 <h1><i>Visita a "Hanagakuri"</i></h1>
 <h5>Essa hitória é inspirada em diversos animes mangás e outras Novels que será meljor explicado nas últimaslinhas da página! então muito obrigado pela atenção e vamos logo para oq interessa. </h5>
 <h2><i>Visita a "Hanagakuri</i></h2>
-<p class="dotted">Em uma escola no Japão, os alunos estavam concentrados em seus estudos quando, de repente, a porta da sala se abriu.<br><br>
+<p class="dotted"><i>Em uma escola no Japão, os alunos estavam concentrados em seus estudos quando, de repente, a porta da sala se abriu.<br><br>
 
 — Com licença, professora Hyu. Posso dar uma informação aos alunos?<br><br>
 
@@ -181,11 +181,12 @@ O sino de uma escola toca ao longe.
 Segunda-feira se aproxima.
 Alguns encontros mudam rotinas.
 Outros… mudam pessoas.
-</p>
+</i></p>
      
 </body>
 <a href="index.html">|Voltar|</a><br> <a href="1.1.html">|Proximo Capítulo|</a>
 </htm>
+
 
 
 
