Fix HTML formatting and update content

--- a/EscolaDeProdigios.html
+++ b/EscolaDeProdigios.html
@@ -63,7 +63,7 @@ A diretora se despede e sai da sala.A professora Hyu pigarreia, tentando recuper
 
 — Não precisa ser tão arrogante, representante! *rebateu o garoto. *Mas é verdade, professora Hyu?<br><br>
 
-— S-sim, Goenji… — respondeu ela, sem jeito. — Então não precisa se preocupar.<br><br>
+— S-sim, Goenji… * respondeu ela, sem jeito. * Então não precisa se preocupar.<br><br>
 — E você, Mira, mesmo sendo representante de sala, deve se dirigir aos colegas com respeito, certo?<br><br>
 
 — Compreendo, professora. Tentarei ser menos autoritária da próxima vez.<br><br>
@@ -107,7 +107,7 @@ Yumi chega a tempo e abraça o pai, um homem alto, de expressão cansada.<br><br
 
 — Boa tarde, papi!<br><br>
 
-— Achei que não viria mais — comenta ele, em tom sarcástico.*Eles entram no carro*<br><br>
+— Achei que não viria mais * comenta ele, em tom sarcástico. Eles entram no carro*<br><br>
 
 — Ah! Lembrei! Vamos receber alunos de intercâmbio semana que vem! Do Brasil!<br><br>
 
@@ -117,23 +117,23 @@ Yumi chega a tempo e abraça o pai, um homem alto, de expressão cansada.<br><br
 
 — Isso é perda de tempo. Estamos aqui para estudar, não para receber visitas.<br><br>
 
-— Calma, Mira — responde o pai. — Na verdade, pode ser bom conhecerem mais pessoas da minha terra natal.<br><br>
+— Calma, Mira * responde o pai. * Na verdade, pode ser bom conhecerem mais pessoas da minha terra natal.<br><br>
 
-— Concordo! — diz Yumi animada. — Vai ser divertido!<br><br>
+— Concordo! * diz Yumi animada. * Vai ser divertido!<br><br>
 O carro para no semáforo.<br><br>
 — Quem sabe até duas certas irmãs encontrem alguém interessante…<br><br>
 
-— PAI!! — gritam as duas, constrangidas.<br><br>
+— PAI!! * gritam as duas, constrangidas.*<br><br>
 
 O semáforo muda para verde.O carro segue pelas ruas tranquilas da cidade, agora iluminadas pelas luzes do fim de tarde. Yumi observa as pessoas caminhando apressadas, lojas fechando, estudantes rindo em grupos.<br><br>
 
-— Pai… — ela diz, apoiando o queixo na mão. — Como será que são esses alunos do Brasil?<br><br>
+— Pai… * ela diz, apoiando o queixo na mão. * Como será que são esses alunos do Brasil?<br><br>
 
-— Provavelmente tão normais quanto vocês — responde ele, sem tirar os olhos da rua.<br><br>
+— Provavelmente tão normais quanto vocês * responde ele, sem tirar os olhos da rua.*<br><br>
 
-— Normais? — Mira fecha o livro com um estalo seco. — Duvido muito. Se fossem normais, não estariam vindo para a nossa escola.<br><br>
+— Normais? * Mira fecha o livro com um estalo seco. * Duvido muito. Se fossem normais, não estariam vindo para a nossa escola.<br><br>
 
-— Verdade! — Yumi sorri. — Aposto que eles são super inteligentes… e talvez até estilosos!<br><br>
+— Verdade! * Yumi sorri.* Aposto que eles são super inteligentes… e talvez até estilosos!<br><br>
 
 O pai solta uma breve risada nasal.<br><br>
 
@@ -141,11 +141,11 @@ O pai solta uma breve risada nasal.<br><br>
 
 O carro entra na garagem do prédio. O portão se fecha atrás deles com um som metálico.<br><br>
 
-— Amanhã teremos a reunião na escola — comenta ele. — Quero que as duas se comportem.<br><br>
+— Amanhã teremos a reunião na escola * comenta ele. * Quero que as duas se comportem.<br><br>
 
-— Eu sempre me comporto — diz Mira, séria.<br><br>
+— Eu sempre me comporto * diz Mira, séria.*<br><br>
 
-— Eu também! — responde Yumi rápido demais.<br><br>
+— Eu também! * responde Yumi rápido demais.*<br><br>
 
 Mira lança um olhar desconfiado.Naquela mesma noite<br><br>
 
@@ -163,7 +163,7 @@ Do outro lado do corredor, Mira está sentada à escrivaninha, cercada de livros
 
 Mesmo assim, sua mão hesita antes de fechar o caderno.Em outro lugar, dentro de um avião, um jovem observa as luzes do Japão surgirem pela janela. Seu sorriso é genuíno, quase infantil.<br><br>
 
-— O Japão é mesmo um local interessante não é Wytallo?… — ele diz animado. — Eu tô nervoso... Será que vai ter muita estudantes gatinha? 
+— O Japão é mesmo um local interessante não é Wytallo?… * ele diz animado. * Eu tô nervoso... Será que vai ter muita estudantes gatinha? 
 
 — É normal estar nervoso. Novo país, nova escola… novas pessoas. E talvez tenha mesmo algumas alunas bonitas....<br><br>
 
@@ -186,6 +186,7 @@ Outros… mudam pessoas.
 </body>
 <a href="index.html">|Voltar|</a><br> <a href="1.1.html">|Proximo Capítulo|</a>
 </htm>
+
 
 
 
