--- a/EscolaDeProdigios.html
+++ b/EscolaDeProdigios.html
@@ -20,7 +20,7 @@ p.dotted {border-style: dotted;}
 </head>
 <body>
 <h1><i>Visita a "Hanagakuri"</i></h1>
-<h5>Essa hitória é inspirada em diversos animes mangás e outras Novels que será meljor explicado nas últimaslinhas da página! então muito obrigado pela atenção e vamos logo para oq interessa. </h5>
+<h5>Essa hitória é inspirada em diversos animes mangás e outras Novels, então muito obrigado pela atenção e vamos logo para oq interessa. </h5>
 <h2><i>Visita a "Hanagakuri</i></h2>
 <p class="dotted"><i>Em uma escola no Japão, os alunos estavam concentrados em seus estudos quando, de repente, a porta da sala se abriu.<br><br>
 
@@ -186,6 +186,7 @@ Outros… mudam pessoas.
 </body>
 <a href="index.html">|Voltar|</a><br> <a href="1.1.html">|Proximo Capítulo|</a>
 </htm>
+
 
 
 
